Replaced new URL() by new URI().toURL()